--- a/public/categories.html
+++ b/public/categories.html
@@ -152,14 +152,14 @@
                     <div class="mb-3">
                         <label class="form-label w-100">
                             Name:
-                            <input class="form-control" aria-describedby="emailHelp" value="Category1">
+                            <input class="form-control" placeholder="Category Name" name="name" value="">
                         </label>
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Save</a>
+                    <button onclick="addCategoryButtonOnClick()" type="button" class="btn btn-success">Add</button>
                 </div>
             </div>
         </div>
