[Category] Added View Functionality

--- a/public/categories.html
+++ b/public/categories.html
@@ -177,10 +177,16 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="mb-3">
+                    <div class="mb-2">
+                        <label class="form-label w-100">
+                            Id:
+                            <input disabled class="form-control" name="id" value="">
+                        </label>
+                    </div>
+                    <div class="mb-2">
                         <label class="form-label w-100">
                             Name:
-                            <input disabled class="form-control" aria-describedby="emailHelp" value="Category1">
+                            <input disabled class="form-control" name="name" value="">
                         </label>
                     </div>
 
