--- a/public/categories.html
+++ b/public/categories.html
@@ -244,17 +244,23 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="mb-3">
+                    <div class="mb-2">
+                        <label class="form-label w-100">
+                            Id:
+                            <input disabled class="form-control" name="id" value="">
+                        </label>
+                    </div>
+                    <div class="mb-2">
                         <label class="form-label w-100">
                             Name:
-                            <input disabled class="form-control" aria-describedby="emailHelp" value="Category1">
+                            <input disabled class="form-control" name="name" value="">
                         </label>
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-danger" href="login.html">Delete</a>
+                    <button onclick="deleteModalDeleteButtonOnClick()" class="btn btn-danger">Delete</button>
                 </div>
             </div>
         </div>
