[Item] Added Item Table Functionality

--- a/public/items.html
+++ b/public/items.html
@@ -107,58 +107,10 @@
                                             <th tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 177.078px;">Actions</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr class="odd">
-                                            <td>1</td>
-                                            <td>Item1</td>
-                                            <td>
-                                                <div>
-                                                    <a href="#" class="btn btn-success btn-icon-split btn-sm"
-                                                    data-toggle="modal" data-target="#viewModal">
-                                                        <span class="icon text-white-50">
-                                                            <i class="fas fa-eye"></i>
-                                                        </span>
-                                                        <span class="text">View</span>
-                                                    </a>
-                                                    <a href="#" class="btn btn-primary btn-icon-split btn-sm" 
-                                                    data-toggle="modal" data-target="#editModal">
-                                                        <span class="icon text-white-50">
-                                                            <i class="fas fa-edit"></i>
-                                                        </span>
-                                                        <span class="text">Edit</span>
-                                                    </a>
-                                                    <a href="#" class="btn btn-danger btn-icon-split btn-sm"
-                                                    data-toggle="modal" data-target="#deleteModal">
-                                                        <span class="icon text-white-50">
-                                                            <i class="fas fa-trash"></i>
-                                                        </span>
-                                                        <span class="text">Delete</span>
-                                                    </a>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr class="even">
-                                            <td>2</td>
-                                            <td>Item2</td>
-                                            <td>
-                                                <a href="#" class="btn btn-success btn-icon-split btn-sm">
-                                                    <span class="icon text-white-50">
-                                                        <i class="fas fa-eye"></i>
-                                                    </span>
-                                                    <span class="text">View</span>
-                                                </a>
-                                                <a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                                                    <span class="icon text-white-50">
-                                                        <i class="fas fa-edit"></i>
-                                                    </span>
-                                                    <span class="text">Edit</span>
-                                                </a>
-                                                <a href="#" class="btn btn-danger btn-icon-split btn-sm">
-                                                    <span class="icon text-white-50">
-                                                        <i class="fas fa-trash"></i>
-                                                    </span>
-                                                    <span class="text">Delete</span>
-                                                </a>
+                                    <tbody id="itemsTable">
+                                        <tr>
+                                            <td colspan='3' class='text-center'>
+                                                <span> No Items </span>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -345,6 +297,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+
+    <!-- Script -->
+    <script src="./js/items.js"></script>
 
 </body>
 
