[Refactor] Fixed Some Inconsistencies

--- a/public/items.html
+++ b/public/items.html
@@ -177,7 +177,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header bg-gradient-success">
-                    <h5 class="modal-title text-white" id="viewModalLabel">View Category</h5>
+                    <h5 class="modal-title text-white" id="viewModalLabel">View Item</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
@@ -252,7 +252,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header bg-gradient-danger">
-                    <h5 class="modal-title text-white" id="deleteModalLabel">Delete Category</h5>
+                    <h5 class="modal-title text-white" id="deleteModalLabel">Delete Item</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
