--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,8 @@
                         <div class="card-body p-0">
                             <!-- Nested Row within Card Body -->
                             <div class="row m-4">
-                                <select>
-                                    <option selected disabled>Select Category</option>
-                                    <option>Category 1</option>
-                                    <option>Category 2</option>
-                                    <option>Category 3</option>
-                                    <option>Category 4</option>
+                                <select id='categorySelectDropdown'>
+                                    <option selected disabled>No Available Categories</option>
                                 </select>
                             </div>
     
@@ -104,14 +100,11 @@
                                             <th tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 177.078px;">Name</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr class="odd">
-                                            <td>1</td>
-                                            <td>Accountant</td>
-                                        </tr>
-                                        <tr class="even">
-                                            <td>2</td>
-                                            <td>Chief Executive Officer (CEO)</td>
+                                    <tbody id="categoryItemsTable">
+                                        <tr>
+                                            <td colspan="3" class="text-center">
+                                                <span>Please Select a Category</span>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -165,6 +158,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+
+    <!-- Script -->
+    <script src="./js/index.js"></script>
 
 </body>
 
