[EXTRA] Add Quantity to Item

--- a/public/items.html
+++ b/public/items.html
@@ -155,6 +155,10 @@
                             <input class="form-control" placeholder="Item Name" name="name" value="">
                         </label>
                         <label class="form-label w-100">
+                            Quantity:
+                            <input class="form-control" placeholder="Quantity" name="qty" value="">
+                        </label>
+                        <label class="form-label w-100">
                             Categories: <br>
                             <div class="categories">
                                 <span class="badge text-danger"> No Available Categories. Item will still be added but will not be assigned a category</span>
@@ -193,6 +197,10 @@
                             <input disabled class="form-control" name="name" value="">
                         </label>
                         <label class="form-label w-100">
+                            Quantity:
+                            <input disabled class="form-control" placeholder="Quantity" name="qty" value="">
+                        </label>
+                        <label class="form-label w-100">
                             Categories: <br>
                             <div class="categories">
                                 <span class="badge text-danger"> Item does not belong to any category</span>
@@ -228,6 +236,10 @@
                         <label class="form-label w-100">
                             Name:
                             <input class="form-control" name="name" value="">
+                        </label>
+                        <label class="form-label w-100">
+                            Quantity:
+                            <input class="form-control" placeholder="Quantity" name="qty" value="">
                         </label>
                         <label class="form-label w-100">
                             Categories: <br>
